@@ -6,6 +6,10 @@ SET rrd_default_in_ds traffic_in
 SET rrd_default_out_ds traffic_out
 SET nowarn_bwlabelpos 1
 
+SET rrd_aggregate_function MAXIMUM
+SET rrd_start now-1hour
+SET rrd_period 3600
+
 FONTDEFINE 10 Vera.ttf 8
 FONTDEFINE 12 Vera.ttf 6
 FONTDEFINE 20 VeraIt.ttf 8
@@ -319,6 +323,7 @@ LINK node00352-node00342
 	OVERLIBCAPTION just 1 caption
 	OVERLIBGRAPH /cacti/graph_image.php?local_graph_id=39&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
 	TARGET tests/test_1.rrd
+	TARGET /usr/local/share/cacti/rra/local_traffic_in_72.rrd
 	NODES node00352 node00342
 	VIA 489 86
 	VIA 540 107
